--- a/starter-page.html
+++ b/starter-page.html
@@ -52,7 +52,7 @@
     </a>
 
     <div class="social-links text-center">
-      <a href="#" class="gmail"><i class="bi bi-gmail"></i></a>
+      <a href="#" class="gmail"><i class="fab fa-google"></i></a>
       <a href="#" class="github"><i class="bi bi-github"></i></a>
       <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
     </div>
