--- a/index.html
+++ b/index.html
@@ -617,7 +617,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Contact</h2>
-        <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
+        <p>Contact me if you liked my work or for project collaborations.</p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -652,6 +652,9 @@
               </div><!-- End Info Item -->
 
             </div>
+          </div>
+          <div class="col-lg-7 d-flex align-items-center justify-content-center">
+            <img src="assets/img/my-bg-image.jpeg" alt="Contact Image" class="img-fluid">
           </div>
         </div>
 
