--- a/index.html
+++ b/index.html
@@ -654,7 +654,7 @@
             </div>
           </div>
           <div class="col-lg-7 d-flex align-items-center justify-content-center">
-            <img src="assets/img/my-bg-image.jpeg" alt="Contact Image" class="img-fluid">
+            <img src="assets/img/my-bg-image.jpeg" alt="Contact Image" class="img-fluid" style="width: auto; height: 60%">
           </div>
         </div>
 
