--- a/index.html
+++ b/index.html
@@ -198,6 +198,13 @@
               </div>
             </div><!-- End Skills Item -->
 
+            <div class="progress">
+              <span class="skill"><span>Web Scraping</span> <i class="val">40%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div><!-- End Skills Item -->
+
           </div>
 
         </div>
