--- a/index.html
+++ b/index.html
@@ -99,10 +99,10 @@
             <img src="assets/img/my-profile-img.jpeg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 content">
-            <h2>UI/UX Designer &amp; Web Developer.</h2>
+            <h2>Data Analyst &amp; Data Scientist.</h2>
             <p class="fst-italic py-3">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua.
+              I am a self-taught data enthusiast. Through constant learning and several hands-on projects, I have developed grasp
+              over data analysis and data science.
             </p>
             <div class="row">
               <div class="col-lg-4">
