--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Skills</h2>
-        <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
+        <p>Following are the skills that I have learned so far.</p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -146,9 +146,9 @@
           <div class="col-lg-6">
 
             <div class="progress">
-              <span class="skill"><span>SQL</span> <i class="val">100%</i></span>
+              <span class="skill"><span>SQL</span> <i class="val">90%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div><!-- End Skills Item -->
 
@@ -243,15 +243,13 @@
             <div class="resume-item">
               <h4>Bachelors of Technology in Aerospace Engineering </h4>
               <h5>2021 - Present</h5>
-              <p><em>PEC University of Technology, Chandigarh, Sector-12, 160012</em></p>
-              <p>CGPA: 8.11 (till 6th semester) </p>
+              <p><em>PEC University of Technology, Chandigarh, Sector-12, 160012 <br> CGPA: 8.11 (till 6th semester) </em></p>
             </div><!-- Edn Resume Item -->
 
             <div class="resume-item">
               <h4>Senior Secondary Education (12th) </h4>
               <h5>2020 - 2021</h5>
-              <p><em>Dr. Devi Chand D.A.V Public School, Mohal, Kullu, Himachal Pradesh</em></p>
-              <p>Percentage: 95.6% </p>
+              <p><em>Dr. Devi Chand D.A.V Public School, Mohal, Kullu, Himachal Pradesh <br>Percentage: 95.6% </em></p>
             </div><!-- Edn Resume Item -->
 
           </div>
