--- a/service-details.html
+++ b/service-details.html
@@ -52,7 +52,7 @@
     </a>
 
     <div class="social-links text-center">
-      <a href="mailto:ak.t.kree@gmail.com" class="gmail"><i class="bi bi-envelope"></i> <i class="bi bi-google"></i></a>
+      <a href="mailto:ak.t.kree@gmail.com" class="gmail"><i class="bi bi-envelope"></i></a>
       <a href="#" class="github"><i class="bi bi-github"></i></a>
       <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
     </div>
