--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
           </div>
 
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
-            <h3 class="resume-title">Professional Experience</h3>
+            <h3 class="resume-title">Experience</h3>
             <div class="resume-item">
               <h4>Research Trainee - Deep Learning</h4>
               <h5>January 2024 - July 2024</h5>
