--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Portfolio</h2>
-        <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+        <p>My projects are quite varied, belonging to data analysis, data science, machine learning, nlp and deep learning domain.</p>
       </div><!-- End Section Title -->
 
       <div class="container">
