--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
 
           <ul class="portfolio-filters isotope-filters" data-aos="fade-up" data-aos-delay="100">
             <li data-filter="*" class="filter-active">All</li>
-            <li data-filter=".filter-sql&dashboard">SQL & Dashboard</li>
+            <li data-filter=".filter-sql-dashboard">SQL & Dashboard</li>
             <li data-filter=".filter-data-science">Data Science</li>
             <li data-filter=".filter-nlp">NLP</li>
             <li data-filter=".filter-deep-learning">Deep Learning</li>
@@ -298,7 +298,7 @@
 
           <div class="row gy-4 isotope-container" data-aos="fade-up" data-aos-delay="200">
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-sql&dashboard">
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-sql-dashboard">
               <div class="portfolio-content h-100">
                 <img src="assets/img/portfolio/app-1.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
@@ -346,7 +346,7 @@
               </div>
             </div><!-- End Portfolio Item -->
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-sql&dashboard">
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-sql-dashboard">
               <div class="portfolio-content h-100">
                 <img src="assets/img/portfolio/app-2.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
@@ -394,7 +394,7 @@
               </div>
             </div><!-- End Portfolio Item -->
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-sql&dashboard">
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-sql-dashboard">
               <div class="portfolio-content h-100">
                 <img src="assets/img/portfolio/app-3.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
