--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
 
           <ul class="portfolio-filters isotope-filters" data-aos="fade-up" data-aos-delay="100">
             <li data-filter="*" class="filter-active">All</li>
-            <li data-filter=".filter-sql-dashboard">SQL & Dashboard</li>
+            <li data-filter=".filter-sql-dashboard">SQL and Dashboard</li>
             <li data-filter=".filter-data-science">Data Science</li>
             <li data-filter=".filter-nlp">NLP</li>
             <li data-filter=".filter-deep-learning">Deep Learning</li>
