--- a/index.html
+++ b/index.html
@@ -294,6 +294,7 @@
             <li data-filter=".filter-data-science">Data Science</li>
             <li data-filter=".filter-nlp">NLP</li>
             <li data-filter=".filter-deep-learning">Deep Learning</li>
+            <li data-filter=".filter-misc">Miscellaneous</li>
           </ul><!-- End Portfolio Filters -->
 
           <div class="row gy-4 isotope-container" data-aos="fade-up" data-aos-delay="200">
