corrected link path

--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
 
     <div class="social-links text-center">
       <a href="mailto:ak.t.kree@gmail.com" class="gmail"><i class="bi bi-envelope"></i></a>
-      <a href="#https://github.com/akanksha-th" class="github"><i class="bi bi-github"></i></a>
-      <a href="#https://www.linkedin.com/in/akanksha--thakur/" class="linkedin"><i class="bi bi-linkedin"></i></a>
+      <a href="https://github.com/akanksha-th" class="github"><i class="bi bi-github"></i></a>
+      <a href="https://www.linkedin.com/in/akanksha--thakur/" class="linkedin"><i class="bi bi-linkedin"></i></a>
     </div>
 
     <nav id="navmenu" class="navmenu">
