--- a/index.html
+++ b/index.html
@@ -220,7 +220,11 @@
       <div class="container section-title" data-aos="fade-up">
         <h2>Resume</h2>
         <p>The section below, has details regarding my education and experiences.</p>
+        <div class="resume-download">
+          <a href="assets/Akanksha_Placement_Resume.pdf" class="btn btn-primary" download>Download Resume</a>
+        </div>
       </div><!-- End Section Title -->
+
 
       <div class="container">
 
@@ -231,7 +235,7 @@
 
             <div class="resume-item pb-0">
               <h4>Akanksha</h4>
-              <p><em>Innovative and deadline-driven Graphic Designer with 3+ years of experience designing and developing user-centered digital/print marketing material from initial concept to final, polished deliverable.</em></p>
+              <p><em>A highly motivated data enthusiast with a keen interest in data analysis, machine learning, and deep learning. Proven ability to solve complex problems and deliver innovative solutions.</em></p>
               <ul>
                 <li>Chandigarh</li>
                 <li>+91 9779669457</li>
