modifies resume section

--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>Resume</h2>
+        <h2 style="margin-right: 10px;">Resume</h2>
         <div class="resume-download">
           <a href="assets/Akanksha_Placement_Resume.pdf" class="btn btn-primary" download>Download Resume</a>
         </div>
