removed redundant parts

--- a/index.html
+++ b/index.html
@@ -218,12 +218,11 @@
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2 style="margin-right: 10px;">Resume</h2>
+        <h2>Resume</h2>
+        <p>The section below, has details regarding my education and experiences.</p>
         <div class="resume-download">
           <a href="assets/Akanksha_Placement_Resume.pdf" class="btn btn-primary" download>Download Resume</a>
         </div>
-        
-        <p>The section below, has details regarding my education and experiences.</p>
       </div><!-- End Section Title -->
 
 
@@ -237,11 +236,6 @@
             <div class="resume-item pb-0">
               <h4>Akanksha</h4>
               <p><em>A highly motivated data enthusiast with a keen interest in data analysis, machine learning, and deep learning. Proven ability to solve complex problems and deliver innovative solutions.</em></p>
-              <ul>
-                <li>Chandigarh</li>
-                <li>+91 9779669457</li>
-                <li>ak.t.kree@gmail.com</li>
-              </ul>
             </div><!-- Edn Resume Item -->
 
             <h3 class="resume-title">Education</h3>
