added about myself

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>About</h2>
-        <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+        <p>I am passionate about applying data science to real-world problems and am always eager to take on new challenges. Whether it's through my academic pursuits or personal projects, I strive to push the boundaries of what's possible with data.</p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -101,8 +101,9 @@
           <div class="col-lg-8 content">
             <h2>Data Analyst &amp; Data Scientist.</h2>
             <p class="fst-italic py-3">
-              I am a self-taught data enthusiast. Through constant learning and several hands-on projects, I have developed grasp
-              over data analysis and data science.
+              I am a dedicated and self-taught data enthusiast with a passion for uncovering insights and solving complex problems 
+              through data. With hands-on experience in data analysis and data science, 
+              I have developed strong analytical skills and a robust understanding of various data-driven methodologies.
             </p>
             <div class="row">
               <div class="col-lg-4">
@@ -120,8 +121,9 @@
               </div>
             </div>
             <p class="py-3">
-              Officiis eligendi itaque labore et dolorum mollitia officiis optio vero. Quisquam sunt adipisci omnis et ut. Nulla accusantium dolor incidunt officia tempore. Et eius omnis.
-              Cupiditate ut dicta maxime officiis quidem quia. Sed et consectetur qui quia repellendus itaque neque.
+              I am driven by a constant desire to learn and grow, continually enhancing my skills through practical projects and
+               continuous learning. My background in Aerospace Engineering complements my analytical abilities, providing me with 
+               a unique perspective on problem-solving and innovation.
             </p>
           </div>
         </div>
