--- a/index.html
+++ b/index.html
@@ -285,14 +285,14 @@
         <p>My projects are quite varied, belonging to data analysis, data science, machine learning, nlp and deep learning domain.</p>
       </div><!-- End Section Title -->
 
-      <!-- <div class="container">
+      <div class="container">
 
         <div class="isotope-layout" data-default-filter="*" data-layout="masonry" data-sort="original-order">
 
           <ul class="portfolio-filters isotope-filters" data-aos="fade-up" data-aos-delay="100">
             <li data-filter="*" class="filter-active">All</li>
             <li data-filter=".filter-sql-dashboard">SQL and Dashboard</li>
-            <li data-filter=".filter-data-science">Data Science</li>
+            <li data-filter=".filter-data-analysis">Data Analysis and ML</li>
             <li data-filter=".filter-nlp">NLP</li>
             <li data-filter=".filter-deep-learning">Deep Learning</li>
             <li data-filter=".filter-misc">Miscellaneous</li>
@@ -300,19 +300,19 @@
 
           <div class="row gy-4 isotope-container" data-aos="fade-up" data-aos-delay="200">
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-sql-dashboard">
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-data-analysis">
               <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/app-1.jpg" class="img-fluid" alt="">
+                <img src="assets/img/portfolio/data_analysis_1.png" class="img-fluid" alt="">
                 <div class="portfolio-info">
-                  <h4>App 1</h4>
-                  <p>Lorem ipsum, dolor sit amet consectetur</p>
-                  <a href="assets/img/portfolio/app-1.jpg" title="App 1" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  <h4>Data-Analysis 1</h4>
+                  <p>In-depth Data Cleaning, EDA, Feature Engineering for Flight Price Prediction</p>
+                  <a href="assets/img/portfolio/data_analysis_1.png" title="Data-Analysis 1" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="https://github.com/akanksha-th/Flight_Price_Prediction" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
             </div>
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-data-science">
+            <!-- <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-data-science">
               <div class="portfolio-content h-100">
                 <img src="assets/img/portfolio/product-1.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
