--- a/index.html
+++ b/index.html
@@ -324,19 +324,19 @@
               </div>
             </div>
 
-            <!-- <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-nlp">
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-misc">
               <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/branding-1.jpg" class="img-fluid" alt="">
+                <img src="assets/img/portfolio/misc_2.png" class="img-fluid" alt="">
                 <div class="portfolio-info">
-                  <h4>Branding 1</h4>
-                  <p>Lorem ipsum, dolor sit amet consectetur</p>
-                  <a href="assets/img/portfolio/branding-1.jpg" title="Branding 1" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  <h4>Misc 2</h4>
+                  <p>A Collection of Small Python Projects (Just For Fun)</p>
+                  <a href="assets/img/portfolio/misc_2.png" title="Branding 1" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="https://github.com/akanksha-th/Small_Python_Projects" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
             </div>
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-deep-learning">
+            <!-- <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-deep-learning">
               <div class="portfolio-content h-100">
                 <img src="assets/img/portfolio/books-1.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
