--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
               <div class="portfolio-content h-100">
                 <img src="assets/img/portfolio/misc_2.png" class="img-fluid" alt="">
                 <div class="portfolio-info">
-                  <h4>Misc 2</h4>
+                  <h4>Miscellaneous 2</h4>
                   <p>A Collection of Small Python Projects (Just For Fun)</p>
                   <a href="assets/img/portfolio/misc_2.png" title="Branding 1" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="https://github.com/akanksha-th/Small_Python_Projects" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
