--- a/index.html
+++ b/index.html
@@ -336,19 +336,19 @@
               </div>
             </div>
 
-            <!-- <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-deep-learning">
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-deep-analysis">
               <div class="portfolio-content h-100">
                 <img src="assets/img/portfolio/books-1.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
-                  <h4>Books 1</h4>
-                  <p>Lorem ipsum, dolor sit amet consectetur</p>
+                  <h4>Data-Analysis 2</h4>
+                  <p>Collaborative Filtering Based Book Recommender, deployed using streamlit.</p>
                   <a href="assets/img/portfolio/books-1.jpg" title="Branding 1" data-gallery="portfolio-gallery-book" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  <a href="https://github.com/akanksha-th/Books_Recommender" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
             </div>
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-sql-dashboard">
+            <!-- <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-sql-dashboard">
               <div class="portfolio-content h-100">
                 <img src="assets/img/portfolio/app-2.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
