--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
                 <div class="portfolio-info">
                   <h4>Miscellaneous 2</h4>
                   <p>A Collection of Small Python Projects (Just For Fun)</p>
-                  <a href="assets/img/portfolio/misc_2.png" title="Branding 1" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="assets/img/portfolio/misc_2.png" title="Miscellaneous 2" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="https://github.com/akanksha-th/Small_Python_Projects" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
@@ -342,7 +342,7 @@
                 <div class="portfolio-info">
                   <h4>Data-Analysis 2</h4>
                   <p>Collaborative Filtering Based Book Recommender, deployed using streamlit.</p>
-                  <a href="assets/img/portfolio/books-1.jpg" title="Branding 1" data-gallery="portfolio-gallery-book" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="assets/img/portfolio/books-1.jpg" title="Data-Analysis 2" data-gallery="portfolio-gallery-book" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="https://github.com/akanksha-th/Books_Recommender" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
